# symbolic

./: .gitignore  README.md  cabal.project  fourmolu.yaml
symbolic-base/: README.md  Setup.hs  a.out  hie.yaml  symbolic-base.cabal
symbolic-base/app/: GroupElementsGenerator.hs  Main.hs
symbolic-base/bench/: BenchEC.hs  BenchLagrangeBasis.hs  BenchPolyMul.hs
symbolic-base/group-elements-generator/: Main.hs
symbolic-base/rust-wrapper/: Cargo.toml
symbolic-base/rust-wrapper/benches/: div_fft_bench.rs  halo2_circuit_bench.rs  msm_bench.rs  mul_fft_bench.rs
symbolic-base/rust-wrapper/src/: g1.rs  g2.rs  gt.rs  halo2.rs  lib.rs  msm.rs  point.rs  poly.rs  prover.rs  scalar.rs  scale.rs  storable.rs  utils.rs
symbolic-base/src/ZkFold/: ArithmeticCircuit.hs  Prelude.hs
symbolic-base/src/ZkFold/Algebra/: Class.hs  DFT.hs  Field.hs  Number.hs  Permutation.hs  VectorSpace.hs
symbolic-base/src/ZkFold/Algebra/EllipticCurve/: BLS12_381.hs  BN254.hs  Class.hs  Ed25519.hs  Jubjub.hs  Pairing.hs  Pasta.hs  PlutoEris.hs  Secp256k1.hs
symbolic-base/src/ZkFold/Algebra/Polynomial/: Multivariate.hs  Univariate.hs
symbolic-base/src/ZkFold/Algorithm/: Interpolation.hs  ReedSolomon.hs
symbolic-base/src/ZkFold/Algorithm/Hash/: MiMC.hs  Poseidon.hs
symbolic-base/src/ZkFold/ArithmeticCircuit/: Arbitrary.hs  Children.hs  Context.hs  Desugaring.hs  Elem.hs  Experimental.hs  Lookup.hs  MerkleHash.hs  Node.hs  Op.hs  Optimization.hs  Var.hs  Witness.hs  WitnessEstimation.hs
symbolic-base/src/ZkFold/Base/Algorithm/: ReedSolomon.hs
symbolic-base/src/ZkFold/Base/Data/: ByteString.hs  Orphans.hs  Vector.hs
symbolic-base/src/ZkFold/Base/Protocol/: KZG.hs  Plonk.hs  Plonkup.hs
symbolic-base/src/ZkFold/Control/: BackwardsState.hs  Conditional.hs  HApplicative.hs
symbolic-base/src/ZkFold/Data/: Binary.hs  Bool.hs  ByteString.hs  Collect.hs  Empty.hs  Eq.hs  FromList.hs  HFunctor.hs  Iso.hs  Matrix.hs  MerkleTree.hs  Ord.hs  Orphans.hs  Package.hs  Product.hs  Summoner.hs  Type.hs  Utils.hs  Vector.hs
symbolic-base/src/ZkFold/Data/HFunctor/: Classes.hs
symbolic-base/src/ZkFold/Data/List/: Infinite.hs
symbolic-base/src/ZkFold/Data/Sparse/: Matrix.hs  Vector.hs
symbolic-base/src/ZkFold/FFI/Rust/: Conversion.hs  Halo2.hs  Plonkup.hs  PlonkupTypes.hs  Poly.hs  Runner.hs  RustBLS.hs  RustFunctions.hs  Types.hs
symbolic-base/src/ZkFold/Protocol/: Halo2.hs  IVC.hs  KZG.hs  NonInteractiveProof.hs  Plonk.hs  Plonkup.hs
symbolic-base/src/ZkFold/Protocol/Halo2/: Export.hs
symbolic-base/src/ZkFold/Protocol/IVC/: Accumulator.hs  AccumulatorScheme.hs  AlgebraicMap.hs  Commit.hs  CommitOpen.hs  FiatShamir.hs  ForeignField.hs  Internal.hs  NARK.hs  OperationRecord.hs  Oracle.hs  Predicate.hs  RecursiveFunction.hs  SpecialSound.hs  StepFunction.hs  VerifierCircuit.hs  WeierstrassWitness.hs
symbolic-base/src/ZkFold/Protocol/NonInteractiveProof/: Class.hs  Haskell.hs  Internal.hs  (+5 more)
symbolic-base/src/ZkFold/Symbolic/: Boot.hs  Class.hs  Compat.hs  Compiler.hs  Fold.hs  Interpolation.hs  Interpreter.hs  MonadCircuit.hs  Testing.hs  V2.hs  WitnessContext.hs
symbolic-base/test/: Main.hs  SetupGenerator.hs
symbolic-base/test/Tests/: Common.hs
symbolic-base/test/Tests/Algebra/: EllipticCurve.hs  Field.hs  Groebner.hs  GroebnerBasis.hs  Group.hs  Pairing.hs  Permutation.hs  Permutations.hs  ReedSolomon.hs  Univariate.hs
symbolic-base/test/Tests/Data/: Binary.hs  MerkleTree.hs
symbolic-base/test/Tests/FFI/: RustBLS.hs
symbolic-base/test/Tests/Protocol/: IVC.hs  NonInteractiveProof.hs  Plonkup.hs
symbolic-base/test/Tests/Symbolic/: ArithmeticCircuit.hs  Compiler.hs
symbolic-base/test/data/: poseidon_reference_test_vectors.txt  poseidon_testvectors.txt
symbolic-base/test/data/sha-3bytetestvectors/: LongMsgKAT_256.txt
symbolic-examples/: README.md  compile_to_wasm.sh  ghc_wasm_jsffi.js  hie.yaml  symbolic-examples.cabal
symbolic-examples/bench/: CircuitSize.hs  CompilerPerformance.hs  Experimental.hs  GoldenTest.hs
symbolic-examples/compilation_demo/: Main.hs
symbolic-examples/smart-wallet-creator/: Main.hs
symbolic-examples/smart-wallet-creator-rust/: Main.hs
symbolic-examples/src/Examples/: BLS12_381.hs  BatchTransfer.hs  Blake2b.hs  ByteString.hs  Commitment.hs  Conditional.hs  Constant.hs  ECDSA.hs  Ed25519.hs  Eq.hs  FFA.hs  Fibonacci.hs  FieldElement.hs  JWT.hs  MerkleTree.hs  Merkletree.hs  MiMCHash.hs  Mithril.hs  Pasta.hs  RSA.hs  ReverseList.hs  UInt.hs  ZkLogin.hs
symbolic-examples/src/ZkFold/Symbolic/: Examples.hs
symbolic-examples/stats/: Blake2b_224  Blake2b_256  ByteString.Add.512  ByteString.And.32  ByteString.Extend.1.512  ByteString.Or.64  ByteString.Truncate.512.1  ByteString.Truncate.74.54  Conditional  Conditional.Const  Conditional.Const.Const  Conditional.True  Const  Constant.5  ECDSA.Pallas.256  Eq  Eq.Const  Eq.Constant.5  Eq.Vector  Eq.Vector.Const  Exp65537Mod  Experimental  Experimental.ExpMod  Experimental.ExpMod.Node  Experimental.Fib100  Experimental.Fib100.Elem  Experimental.Fib100.Node  Experimental.MiMC  Experimental.MiMC.Elem  Experimental.MiMC.Node  FFA.Add.097  FFA.Add.337  FFA.Add.Foreign  FFA.Add.Native  FFA.Inv.097  FFA.Inv.337  FFA.Inv.Foreign  FFA.Inv.Native  FFA.Mul.097  FFA.Mul.337  (+38 more)
symbolic-examples/wasm/: ghc_wasm_jsffi.js  index.mjs
symbolic-examples/zero-division-bug/: Main.hs
symbolic-halo2-bridge/: Cargo.toml  README.md
symbolic-halo2-bridge/kzg_params/: kzg_params_12
symbolic-halo2-bridge/src/: imported_circuit.rs  ir.rs  main.rs
symbolic-ledger/: hie.yaml  symbolic-ledger.cabal  zkfold-ledger.cabal
symbolic-ledger/bench/: CircuitBreakdown.hs  CircuitSize.hs
symbolic-ledger/stats/: Ledger.1.1.10.1.1.2  Ledger.1.1.2.1.1.1  Ledger.1.1.2.1.1.1.1  Ledger.1.1.2.1.1.1.2  Ledger.1.1.2.1.1.2  Ledger.1.1.2.2.2.2  Ledger.1.1.2.2.2.2.2  Ledger.1.1.2.2.5.2  Ledger.1.1.2.5.2.2  Ledger.1.1.20.1.1.2  Ledger.1.1.20.2.2.2  Ledger.1.1.3.2.2.2.3  Ledger.1.1.4.1.1.1.2  Ledger.1.1.4.1.1.2  Ledger.1.1.4.2.2.2.2  Ledger.1.1.6.1.1.2
symbolic-ledger/test/: Main.hs
symbolic-ledger/test/data/: ledger_contract_input.json
(+344 files in other folders)
