cabal-version:      3.0

name:               symbolic-examples
version:            0.1.0.0
tested-with:        GHC == 9.12.1
synopsis:           ZkFold Symbolic examples
homepage:           https://zkfold.io/
category:           Cryptography, DSL, Math, Symbolic Computation
author:             Vladimir Sinyakov, Pavel Sokolov, Vladimir Morozov, Eitan Chatav, Ilya Baryshnikov, Anna Hovanskaya, Evgenii Samodelov
maintainer:         vlasin@zkfold.io
license:            MIT
license-file:       LICENSE
build-type:         Simple

description:
  This package contains the examples generated using the the zkFold Symbolic framework.
  It also contains a benchmark for compiling the examples into arithmetic circuits and evaluating those circuits on a set of inputs.

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
      -Wunused-packages
      -O2
    if !arch(wasm32)
      ghc-options:
        -threaded
        -fprof-auto
        -fprof-cafs
    if flag(pedantic)
      ghc-options:
        -Werror
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NoStarIsType,
      NumericUnderscores,
      OverloadedStrings,
      OverloadedLabels,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      ViewPatterns

common options-exe
    import: options
    if arch(wasm32)
      buildable: False
    else
      buildable: True
    ghc-options:
      -rtsopts
      -fprof-auto
      -fprof-cafs
    ghc-prof-options:
      -with-rtsopts=-pj

library
    import: options
    if arch(wasm32)
        ghc-options: 
            -no-hs-main 
            -optl-mexec-model=reactor 
            -optl-Wl,--export=hs_init,--export=mkProofBytesWasm,--export=mkProofBytesMockWasm,-Llibs,-lrust_wrapper_wasm
    exposed-modules:
      ZkFold.Symbolic.Examples
      ZkFold.Symbolic.Examples.Blake2b
      ZkFold.Symbolic.Examples.BLS12_381
      ZkFold.Symbolic.Examples.ByteString
      ZkFold.Symbolic.Examples.Conditional
      ZkFold.Symbolic.Examples.Constant
      ZkFold.Symbolic.Examples.ECDSA
      ZkFold.Symbolic.Examples.Ed25519
      ZkFold.Symbolic.Examples.Eq
      ZkFold.Symbolic.Examples.FFA
      ZkFold.Symbolic.Examples.Fibonacci
      ZkFold.Symbolic.Examples.FieldElement
      ZkFold.Symbolic.Examples.JWT
      ZkFold.Symbolic.Examples.LEQ
      ZkFold.Symbolic.Examples.MerkleTree
      ZkFold.Symbolic.Examples.MiMCHash
      ZkFold.Symbolic.Examples.Mithril
      ZkFold.Symbolic.Examples.Pasta
      ZkFold.Symbolic.Examples.ReverseList
      ZkFold.Symbolic.Examples.RSA
      ZkFold.Symbolic.Examples.SmartWallet
      ZkFold.Symbolic.Examples.UInt
      ZkFold.Symbolic.Examples.UtxoAccumulator
      ZkFold.Symbolic.Examples.ZkLogin
    build-depends:
      adjunctions                                ,
      aeson                                      ,
      base                          >= 4.9 && < 5,
      base16-bytestring                          ,
      bytestring                                 ,
      deepseq                                    ,
      deriving-aeson                             ,
      symbolic-base                              ,
      text                                       ,
    hs-source-dirs: src

benchmark bench-compiler-performance
    import:           options-exe
    main-is:          CompilerPerformance.hs
    hs-source-dirs:   bench
    type:             exitcode-stdio-1.0
    ghc-options:
      -fprof-auto
      -fprof-cafs
      -O3
    build-depends:
      adjunctions,
      base,
      binary,
      deepseq,
      symbolic-base,
      symbolic-examples,
      tasty-bench

benchmark bench-circuit-size
    import:           options-exe
    main-is:          CircuitSize.hs
    hs-source-dirs:   bench
    type:             exitcode-stdio-1.0
    ghc-options:      -O3
    build-depends:
      base,
      bytestring,
      symbolic-base,
      symbolic-examples,
      tasty,
      tasty-golden

executable smart-wallet-creator
  import:           options 
  import:           options-exe
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   smart-wallet-creator
  build-depends:
    base              >= 4.9 && < 5,
    bytestring                     ,
    symbolic-base                  ,
    symbolic-examples
