[package]
name = "symbolic-halo2-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.5"
ff = "0.13.0"
hex = "0.4.3"
log = "0.4.22"
rand = "0.8"
rand_core = { package = "rand_core", version = "0.6.4" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

blstrs = { git = "https://github.com/davidnevadoc/blstrs", rev = "3dfe5bf" }
halo2_proofs = { git = "https://github.com/input-output-hk/halo2", rev = "0bca06e58937fbe213a0530ecac9d8e0fed501d6" }
plutus-halo2-verifier-gen = { git = "https://github.com/input-output-hk/plutus-halo2-verifier-gen", branch = "main" }
