cabal-version: 3.0
name: symbolic-ledger
version: 0.1.0.0
tested-with: ghc ==9.12.1
synopsis: Symbolic Ledger
homepage: https://zkfold.io/
category: Blockchain, Cryptography, DSL, Math, Symbolic Computation
author: Vladimir Sinyakov, Sourabh Aggarwal, Pavel Sokolov, Vladimir Morozov, Eitan Chatav
maintainer: vlasin@zkfold.io
license: MIT
license-file: LICENSE
build-type: Simple
description:
  This package contains the definitions related to the zkFold Ledger.

data-files:
  test/data/ledger_contract_input.json

flag Pedantic
  description: Enable pedantic build with -Werror
  manual: True
  default: False

common options
  default-language: Haskell2010
  ghc-options:
    -fwarn-redundant-constraints
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wnoncanonical-monad-instances
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
    -O2
    -threaded

  if flag(pedantic)
    ghc-options:
      -Werror
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

common options-exe
  import: options
  ghc-options:
    -rtsopts

  ghc-prof-options:
    -with-rtsopts=-pj

library
  import: options
  exposed-modules:
    ZkFold.Symbolic.Ledger.Circuit.Compile
    ZkFold.Symbolic.Ledger.Examples.One
    ZkFold.Symbolic.Ledger.Examples.Three
    ZkFold.Symbolic.Ledger.Examples.Two
    ZkFold.Symbolic.Ledger.Offchain.State.Update
    ZkFold.Symbolic.Ledger.Types
    ZkFold.Symbolic.Ledger.Types.Address
    ZkFold.Symbolic.Ledger.Types.Field
    ZkFold.Symbolic.Ledger.Types.Hash
    ZkFold.Symbolic.Ledger.Types.Orphans
    ZkFold.Symbolic.Ledger.Types.State
    ZkFold.Symbolic.Ledger.Types.Transaction
    ZkFold.Symbolic.Ledger.Types.Transaction.Batch
    ZkFold.Symbolic.Ledger.Types.Transaction.Core
    ZkFold.Symbolic.Ledger.Types.Value
    ZkFold.Symbolic.Ledger.Utils
    ZkFold.Symbolic.Ledger.Validation.State
    ZkFold.Symbolic.Ledger.Validation.Transaction
    ZkFold.Symbolic.Ledger.Validation.TransactionBatch

  build-depends:
    aeson,
    base >=4.9 && <5,
    bytestring,
    lens,
    openapi3,
    symbolic-base,

  hs-source-dirs: src

test-suite symbolic-ledger-test
  import: options-exe
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options:
    -threaded
    "-with-rtsopts=-A128M -AL256m -qb0 -qn4 -N"

  other-modules:
    Paths_symbolic_ledger
    Tests.Symbolic.Ledger.E2E.Compile
    Tests.Symbolic.Ledger.E2E.Compile.One
    Tests.Symbolic.Ledger.E2E.Compile.Three
    Tests.Symbolic.Ledger.E2E.Compile.Two
    Tests.Symbolic.Ledger.E2E.One
    Tests.Symbolic.Ledger.E2E.Three
    Tests.Symbolic.Ledger.E2E.Two
    Tests.Symbolic.Ledger.E2E.Utils
    Tests.Symbolic.Ledger.JSON.LedgerContractInputGolden
    Tests.Symbolic.Ledger.Update

  autogen-modules:
    Paths_symbolic_ledger

  build-depends:
    aeson,
    aeson-pretty,
    base,
    bytestring,
    containers,
    hspec <2.12,
    symbolic-base,
    symbolic-ledger,

benchmark bench-circuit-size
  import: options-exe
  main-is: CircuitSize.hs
  hs-source-dirs: bench
  type: exitcode-stdio-1.0
  ghc-options: -O3
  build-depends:
    base,
    bytestring,
    symbolic-base,
    symbolic-ledger,
    tasty,
    tasty-golden,
