[package]
name = "rust-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.5.0", features = ["parallel"]}
ark-ec = { version = "0.5.0", features = ["parallel"]}
ark-std = { version = "0.5.0"}
ark-serialize = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
der = "0.7"
num-bigint = "0.4.6"
num-traits = "0.2.19"
ark-poly = "0.5.0"
ark-test-curves = "0.5.0"
cfg-if = "1.0.1"
blake2 = "0.10.6"
libc = "0.2.13"
itertools = "0.14"
bytemuck = "1.23.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bench]]
name = "msm_bench"
path = "benches/msm_bench.rs"
harness = false

[[bench]]
name = "div_fft_bench"
path = "benches/div_fft_bench.rs"
harness = false

[[bench]]
name = "mul_fft_bench"
path = "benches/mul_fft_bench.rs"
harness = false
