[package]
name = "rust-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.5.0", features = ["parallel"]}
ark-ec = { version = "0.5.0", features = ["parallel"]}
ark-std = { version = "0.5.0"}
ark-serialize = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
num-bigint = "0.4.6"
num-traits = "0.2.19"
ark-poly = "0.5.0"
cfg-if = "1.0.1"
blake2 = "0.10.6"
libc = "0.2.13"
itertools = "0.14"
halo2_proofs = { git = "https://github.com/input-output-hk/halo2", package = "halo2_proofs" }
halo2curves = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
blake2b_simd = "1.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bench]]
name = "msm_bench"
path = "benches/msm_bench.rs"
harness = false

[[bench]]
name = "div_fft_bench"
path = "benches/div_fft_bench.rs"
harness = false

[[bench]]
name = "mul_fft_bench"
path = "benches/mul_fft_bench.rs"
harness = false

[[bench]]
name = "halo2_circuit_bench"
path = "benches/halo2_circuit_bench.rs"
harness = false
